# 3D_dynamic_wake_diffusion

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  visualization.ipynb
foam_cases/example.ADM_270_1/: runscript.solve.1
foam_cases/example.ADM_270_1/constant/: turbineArrayProperties
foam_cases/example.ADM_270_1/system/: changeDictionaryDict.updateBCs.west.1  topoSetDict.local.1  topoSetDict.local.2
foam_cases/example.ADM_270_10/: runscript.preprocess  setUp
foam_cases/example.ADM_270_10/constant/: turbineArrayProperties
foam_cases/example.ADM_270_11/: runscript.solve.1
foam_cases/example.ADM_270_11/constant/: ABLProperties  turbineArrayProperties
foam_cases/example.ADM_270_11/system/: controlDict.1  topoSetDict.local.1  topoSetDict.local.2
foam_cases/example.ADM_270_12/constant/: turbineArrayProperties
foam_cases/example.ADM_270_2/: runscript.preprocess
foam_cases/example.ADM_270_2/constant/: turbineArrayProperties
foam_cases/example.ADM_270_2/system/: topoSetDict.local.1  topoSetDict.local.2  topoSetDict.local.3  topoSetDict.local.4  topoSetDict.local.5  topoSetDict.local.6
foam_cases/example.ADM_270_3/: runscript.preprocess
foam_cases/example.ADM_270_4/: runscript.preprocess
foam_cases/example.ADM_270_6/: runscript.solve.1
my_LDM/ldm/: ldm_datamodule.py
my_LDM/ldm2/: attention.py  util.py
my_LDM/oneframe_3d/: bicnn_4.py  lightning_model.py
my_LDM/rectified_flow/: bicnn_4.py  lightning_model.py  oneframe_datamodule_.py
my_LDM/utils/: EMA.py  effective_U.py
my_LDM/vae/: layers.py
(+49 files in other folders)
